--- a/wineshare/src/main/resources/static/wineshare-css/login-form.css
+++ b/wineshare/src/main/resources/static/wineshare-css/login-form.css
@@ -30,6 +30,8 @@
 
 }
 
+/*  회원가입 폼 css  */
+
 .account-container{
     width:50%;
      margin: 0 auto;
@@ -59,3 +61,56 @@
     position:absolute;
     bottom: 60px;
 }
+
+/* 약관동의 css */
+
+.terms_sec{
+    width: 50%;
+    margin: 0 auto;
+    border: 1px solid #e5e5e5;
+    margin-top:3%;
+    margin-bottom: 5%;
+    padding: 10px;
+}
+
+.terms_box{
+    padding: 15px;
+}
+
+.agree .main_title{
+  width: 122px;
+  height: 41px;
+  margin: 10px auto;
+}
+
+.txt_box{
+    border: 1px solid #c02323;
+      border-radius: 15px;
+      font-size: 16px;
+      overflow: hidden;
+      overflow: auto;
+      height: 250px;
+      padding: 10px;
+}
+
+.terms_list{
+    grid-template-columns: repeat(1,600px);
+      justify-content: center;
+      list-style: none;
+      padding: 20px 0 30px 0;
+}
+
+.btn_area{
+    float: right;
+}
+
+p {
+    margin: 10px 0; /* 위아래 10px 간격 */
+}
+
+label{
+    font-weight:bold;
+    margin-top:5px;
+}
+
+.btn
