--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
+
 <div th:fragment="header">
 
-
-  <!--  <div id="loading-overlay">-->
-  <!--    <div class="loader"></div>-->
-  <!--  </div> &lt;!&ndash; /.loading-overlay &ndash;&gt;-->
   <header class="style1">
     <div id="site-header">
       <div class="container-fluid">
@@ -19,7 +17,8 @@
             <ul class="menu">
 
               <li class="active">
-                <a href="about.html" title="">About Us</a>
+<!--                <a href="about.html" title="">About Us</a>-->
+                <span class="mouse-pointer">About Us</span>
                 <ul class="sub-menu">
                   <li><a href="About.html" title="">Wine Share</a></li>
                   <li><a th:href="@{boards/notice/list}" title="">공지사항</a></li>
@@ -45,7 +44,7 @@
                 </ul><!-- /.sub-menu -->
               </li>
               <li class="active">
-                <a href="about.html" title="">Marketing</a>
+                <span class="mouse-pointer">Marketing</span>
                 <ul class="sub-menu">
                   <li><a th:href="@{'/marketings/winebar/list'}" title="">Wine Bar</a></li>
                   <li><a th:href="@{'/marketings/bottleshop/list'}" title="">Bottle Shop</a></li>
@@ -55,7 +54,7 @@
                 </ul><!-- /.sub-menu -->
               </li>
               <li class="active">
-                <a href="#" title="">Boards</a>
+                <span class="mouse-pointer">Boards</span>
                 <ul class="sub-menu">
                   <li><a th:href="@{'/boards/upgrade/list'}" title="">등업게시판</a></li>
                   <li><a th:href="@{'/boards/question/list'}" title="">질문게시판</a></li>
@@ -63,7 +62,7 @@
                 </ul><!-- /.sub-menu -->
               </li>
               <li class="active">
-                <a href="#" title="">Events</a>
+                <span class="mouse-pointer">Events</span>
                 <ul class="sub-menu">
                   <li><a th:href="@{'/marketings/list/event'}" title="">행사</a></li>
                   <li><a th:href="@{'/marketings/list/promotion'}" title="">프로모션</a></li>
@@ -106,8 +105,8 @@
                 <li sec:authorize="isAuthenticated()">
                   <a th:href="@{'/members/modify'}">회원정보수정</a>
                 </li>
-                <li><a th:href="@{'/cellars'}" title="">My Cellar</a></li>
-                <li><a th:href="@{'/wines/new'}" title="">와인 등록</a></li>
+                <li><a th:href="@{'/cellars'}" sec:authorize="isAuthenticated()">My Cellar</a></li>
+                <li><a th:href="@{'/wines/new'}" sec:authorize="hasRole('EXPERT') or hasRole('ADMIN')">와인 등록</a></li>
 <!--                <li><a th:href="/marketings/register" title="">업장/행사 등록</a></li>-->
                 <li ><a th:href="@{'/admins/dataChoiList'}" title="">관리자 데이터 목록</a></li>
               </ul><!-- /.sub-menu -->
