관리자 페이지 목록불러오기, 페이지네이션 ajax로 구현 완료

--- a/wineshare/src/main/resources/templates/admin/dataChoiList.html
+++ b/wineshare/src/main/resources/templates/admin/dataChoiList.html
@@ -50,10 +50,10 @@
         <div class="data-btn">
             <button type="button" onclick="location.href='/admins/members/list'" class="btn text-white" >회원</button>
             <button type="button" onclick="location.href='/admins/wines/list'" class="btn text-white" >와인</button>
-            <button type="button" onclick="location.href='/admins/market/list'" class="btn text-white" >마케팅</button>
+            <button type="button" onclick="location.href='/admins/marketings/list'" class="btn text-white" >마케팅</button>
             <button type="button" onclick="location.href='/admins/boards/list'" class="btn text-white" >게시판</button>
-            <button type="button" onclick="location.href='#'" class="btn text-white" >페어링</button>
-            <button type="button" onclick="location.href='#'" class="btn text-white" >아로마</button>
+<!--            <button type="button" onclick="location.href='#'" class="btn text-white" >페어링</button>-->
+<!--            <button type="button" onclick="location.href='#'" class="btn text-white" >아로마</button>-->
         </div>
     </div>
 </div>
