--- a/wineshare/src/main/resources/templates/home1.html
+++ b/wineshare/src/main/resources/templates/home1.html
@@ -178,144 +178,21 @@
     </div> <!-- /.flat-slider -->
 
     <div class="main-homepage-1">
-        <section class="flat-about style1">
 
-        </section> <!-- /flat-about -->
-        <section class="flat-our-product our-product-new">
+
+
+        <section class="flat-products style1 straight ">
             <div class="container">
-                <div class="row">
+                <div class="row straight">
                     <div class="col-lg-12">
                         <div class="title-section">
-                            <h3 class="our-product-title"><a href="#"> Our Products </a></h3>
-                            <h1 class="our-product-main"><a href="#"> Popular This Month </a></h1>
+
+                            <h1 class="our-product-main">Recommended Wine</h1>
                             <div class="our-product-image">
                                 <img th:src="@{/image/homepage14.png}" alt="image">
                             </div>
                         </div> <!-- /title-section -->
                     </div> <!-- /col-lg-12 -->
-                    <div class="col-12 product-content product-fourcolumn clearfix">
-                        <ul class="product clearfix">
-                            <li class="product-item">
-                                <div class="product-thumb clearfix">
-                                    <a href="#" class="product-thumb">
-                                        <img th:src="@{/wineshare-img/surim2.gif}" alt="image">
-                                    </a>
-                                </div>
-                                <div class="product-info text-center clearfix">
-                                    <span class="product-title">Laboure Chardonnay</span>
-                                    <div class="price">
-                                        <ins>
-                                            <span class="amount">$19.99</span>
-                                        </ins>
-                                    </div>
-                                </div>
-                                <div class="product-review">
-                                    <div class="add-cart">
-                                        <a href="#" class="like1"><i class="fa fa-refresh" aria-hidden="true"></i></a>
-                                    </div>
-                                    <div class="add-cart">
-                                        <a href="#" class="like2"><i class="fa fa-heart-o"></i></a>
-                                    </div>
-                                    <div class="add-cart">
-                                        <a href="#" class="like3"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-                            </li> <!-- /product-item -->
-                            <li class="product-item">
-                                <div class="product-thumb clearfix">
-                                    <a href="#" class="product-thumb">
-                                        <img th:src="@{/wineshare-img/surim.gif}" alt="image">
-                                    </a>
-                                    <span class="new">Sale</span>
-                                </div>
-                                <div class="product-info product-hight clearfix">
-                                    <span class="product-title">Josh Cellars Cabarnet</span>
-                                    <div class="price">
-                                        <ins>
-                                            <span class="amount">$29.99</span>
-                                            <del>$38.99</del>
-                                        </ins>
-                                    </div>
-
-                                </div>
-                                <div class="product-review">
-                                    <div class="add-cart">
-                                        <a href="#" class="like1"><i class="fa fa-refresh" aria-hidden="true"></i></a>
-                                    </div>
-                                    <div class="add-cart">
-                                        <a href="#" class="like2"><i class="fa fa-heart-o"></i></a>
-                                    </div>
-                                    <div class="add-cart">
-                                        <a href="#" class="like3"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-                            </li> <!-- /product-item -->
-                            <li class="product-item">
-                                <div class="product-thumb clearfix">
-                                    <a href="#" class="product-thumb">
-                                        <img th:src="@{/wineshare-img/surim2.gif}" alt="image">
-                                    </a>
-
-                                </div>
-                                <div class="product-info clearfix">
-                                    <span class="product-title">Dark Horse Rosé</span>
-                                    <div class="price">
-                                        <ins>
-                                            <span class="amount">$38.49</span>
-                                        </ins>
-                                    </div>
-                                </div>
-                                <div class="product-review">
-                                    <div class="add-cart">
-                                        <a href="#" class="like1"><i class="fa fa-refresh" aria-hidden="true"></i></a>
-                                    </div>
-                                    <div class="add-cart">
-                                        <a href="#" class="like2"><i class="fa fa-heart-o"></i></a>
-                                    </div>
-                                    <div class="add-cart">
-                                        <a href="#" class="like3"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-                            </li> <!-- /product-item -->
-                            <li class="product-item">
-                                <div class="product-thumb clearfix">
-                                    <a href="#" class="product-thumb">
-                                        <img th:src="@{/wineshare-img/surim.gif}" alt="image">
-                                    </a>
-                                </div>
-                                <div class="product-info clearfix">
-                                    <span class="product-title">Dark Hose Rosé</span>
-                                    <div class="price">
-                                        <ins>
-                                            <span class="amount">$38.49</span>
-                                        </ins>
-                                    </div>
-                                </div>
-                                <div class="product-review">
-                                    <div class="add-cart">
-                                        <a href="#" class="like1"><i class="fa fa-refresh" aria-hidden="true"></i></a>
-                                    </div>
-                                    <div class="add-cart">
-                                        <a href="#" class="like2"><i class="fa fa-heart-o"></i></a>
-                                    </div>
-                                    <div class="add-cart">
-                                        <a href="#" class="like3"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-                            </li> <!-- /product-item -->
-                        </ul>
-                    </div> <!-- /product-content -->
-                    <div class="elm-btn">
-                        <a href="#" class="themesflat-button outline ol-accent margin-top-40 hvr-shutter-out-horizontal">VIEW MORE</a>
-                    </div>
-
-                </div> <!-- /row -->
-            </div> <!-- /container -->
-        </section> <!-- /flat-out-product -->
-
-        <section class="flat-products style1 straight ">
-            <div class="container">
-                <div class="row straight">
                     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
                         <div class="flat-latest mgb-mobi40">
                             <div class="latest-title mb-mgtop0">
