--- a/wineshare/src/main/resources/templates/admin/dataList.html
+++ b/wineshare/src/main/resources/templates/admin/dataList.html
@@ -140,7 +140,7 @@
                                 <td>${board.id}</td>
                                 <td>${board.boardStatus}</td>
                                 <td>${board.boardTitle}</td>
-                                <td>${board.regBy}</td>
+                                <td>${board.writerNickname}</td>
                                 <td>${board.regTime}</td>
                             </tr>
                         `).join('')}
@@ -154,8 +154,8 @@
                             <th>번호</th>
                             <th>종류</th>
                             <th>이름</th>
+                            <th>가격</th>
                             <th>작성자</th>
-                            <th>등록일</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -164,8 +164,8 @@
                                 <td>${wine.id}</td>
                                 <td>${wine.wineType}</td>
                                 <td>${wine.wineName}</td>
-                                <td>${wine.country}</td>
-                                <td>${wine.region}</td>
+                                <td>${wine.price}</td>
+                                <td>${wine.memberNickname}</td>
                             </tr>
                         `).join('')}
                     </tbody>
@@ -179,7 +179,7 @@
                             <th>카테고리</th>
                             <th>이름</th>
                             <th>행사</th>
-                            <th>닉네임</th>
+                            <th>작성자</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -189,7 +189,7 @@
                                 <td>${marketing.marketCategory}</td>
                                 <td>${marketing.marketingTitle}</td>
                                 <td>${marketing.eventOrNot}</td>
-                                <td>${marketing.member.nickname}</td>
+                                <td>${marketing.ownerNickname}</td>
                             </tr>
                         `).join('')}
                     </tbody>
